hoofd uit de section halen en section wat mooier maken

--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 </head>
 <body>
     <main>
+        <div id="face">
+                <div></div>
+                <div class="eyebrow"></div>
+                <div class="eyebrow right-eyebrow"></div>
+                <div class="eye"><div></div></div>
+                <div class="eye right-eye"><div></div></div>
+                <div class="nose"></div>
+                <div class="mouth">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+
         <section>
             <article class="row-1">
-                <h1>wie ben ik</h1>
-                <p>Mijn naam is Lorenzo Horden</p>
+                <h1>Wie ben ik</h1>
+                <p>Mijn naam is <span id="name"></span></p>
                 <p>Ik ben 21 jaar</p>
                 <p>Ik zit in het derde jaar aan de opleiding CMD</p>
-                <div id="face">
-                    <div></div>
-                    <div class="eyebrow"></div>
-                    <div class="eyebrow right-eyebrow"></div>
-                    <div class="eye"><div></div></div>
-                    <div class="eye right-eye"><div></div></div>
-                    <div class="nose"></div>
-                    <div class="mouth">
-                        <div></div>
-                        <div></div>
-                    </div>
-                </div>
             </article>
 
             <article class="row-1">
@@ -42,7 +43,7 @@
 
             <article class="row-2">
                 <h2>Leerdoelen</h2>
-                <p>Ik heb deze minor gekozen om meer te leren over</p>
+                <p>Ik heb deze minor gekozen om meer te leren over coderen, ik heb al een beetje verstand van HTML, CSS en JavaScript, maar ik kan er natuurlijk nog veel meer over leren. Dat ben ik hier van plan.</p>
             </article>
         </section>
 
@@ -63,5 +64,6 @@
     <script src="./scripts/script.js"></script>
     <script src="./scripts/loadAlbums.js"></script>
     <script src="./scripts/playRecord.js"></script>
+    <script src="./scripts/test.js"></script>
 </body>
 </html>
